crates/plotnik-tests/tests/04-emit/nodes/wildcard_parent_nested_impossible.txt
Q = (array (_ (program) @p) @node)
------------------ DIAGNOSTICS -------------------
error: no node the grammar builds takes these children
 --> query.ptk:1:13
  |
1 | Q = (array (_ (program) @p) @node)
  |             ^
  |
help: `(_)` and `_` match any node, but no node kind admits this combination of children in this order
